# smart-crop

./: README_PIPELINE.md  main.py  pyproject.toml  run_pipeline.py  smart_crop.py  stage1_preprocess.py  stage2_inference.py  stage3_save_crops.py  stage3_save_crops_optimized.py
